--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,11 @@
 		  <%= stylesheet_link_tag    "application", media: "all" %>
 		  <%= javascript_include_tag "application" %>
 		  <%= csrf_meta_tags %>
+		  <%= favicon_link_tag 'favicon.ico' %>
+		  <%= favicon_link_tag 'iphone-dark-l.png', :rel => 'apple-touch-icon', :type => 'image/png' %>
 		  <%= render 'layouts/shim' %>
 	</head>
-	<body>
+	<body <%= label_pageid(yield(:title)) %>> 
 		<%= render 'layouts/header' %>
 		<div class="container">
 			<% flash.each do |key, value| %>
