--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "bootstrap-responsive";
 
 /* mixins, variables, etc. */
 
@@ -276,4 +277,20 @@ input.error, textarea.error {
   	-moz-background-size: cover;
     -webkit-background-size: cover;
     -o-background-size: cover;
+    .hero-unit {
+  		padding: 60px;
+  		margin-bottom: 30px;
+    	background: rgba(0,0,0,0.5);
+	    // opacity:0.5;
+	    // filter:alpha(opacity=50); /* for ie8 */
+	    -webkit-border-radius: 6px;
+	    -moz-border-radius: 6px;
+	    border-radius: 6px;
+	    z-index:0;
+		// #foreground {
+		// 	position: relative;
+		// 	z-index:2;		
+		// }	
+	}
+
 }
