--- a/app/views/shared/_login_page.html.erb
+++ b/app/views/shared/_login_page.html.erb
@@ -1,12 +1,16 @@
 <% provide(:title, 'Login') %>
 <div class="center hero-unit">
 	<%= link_to image_tag("VerdigrisFinal-complex.png", width: '25%', alt: "Verdigris Technologies"), 'http://verdigristech.com/'%><br>
-	<%= link_to image_tag("energyai_logo.png", width: '30%', alt: "Energy.AI"), root_path %><br>
-<%= link_to "Login with Google Account", '#', class: "btn btn-large btn-primary" %>
-</div>
-<%= link_to "Terms", terms_path, class: "pull-right" %>
-<%= link_to "Blog", blog_path, class: "pull-right" %>
-<%= link_to "Help", help_path, class: "pull-right" %>
-<%= link_to "About Verdigris", aboutus_path, class: "pull-right" %>
-<%= link_to "Sign Up", '#', class: "btn btn-large btn-primary" %>
+	<%= link_to image_tag("energyai_logo.png", width: '30%', alt: "Energy.AI"), root_path %>
 
+	<%= render 'shared/vdglogin' %>
+</div>
+<div class="footer-links row-fluid">
+	<div class="pull-right">
+		<%= link_to "About Verdigris", aboutus_path %>
+		<%= link_to "Blog", blog_path %>
+		<%= link_to "Help", help_path %>
+		<%= link_to "Terms", terms_path %>
+	</div>
+	<span id="sign-up">Need an account? <%= link_to "Sign Up", '#' %></span>
+</div>
