--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,6 +4,9 @@
 /* mixins, variables, etc. */
 
 $grayMediumLight: #eaeaea;
+$gray80: #393939;
+$gray92: #131313;
+$blueinfo: #3a87ad;
 
 @mixin box_sizing {
   -moz-box-sizing: border-box; 
@@ -279,7 +282,7 @@ input.error, textarea.error {
     -o-background-size: cover;
     .hero-unit {
   		padding: 60px;
-  		margin-bottom: 30px;
+  		margin-bottom: 0px;
     	background: rgba(0,0,0,0.5);
 	    // opacity:0.5;
 	    // filter:alpha(opacity=50); /* for ie8 */
@@ -292,5 +295,92 @@ input.error, textarea.error {
 		// 	z-index:2;		
 		// }	
 	}
+	.separator {
+		height: 0px;
+		width: 100%;
+		margin-left: auto;
+		margin-right: auto;
+		// border-top: 1px solid $gray92;
+		// border-bottom: 1px solid $gray80;
+		position: relative; 
+		margin-top:15px;
+		margin-bottom:12px;
+		.or-separator {
+			position: relative;
+			padding: 0px 40px;
+			color: $grayLighter;
+			margin-bottom: 4px;
+			font-size: 10px;
+			text-shadow: 0px 1px 0px black;
+			text-transform: uppercase;
+			top: -6px;
+		}
+	}
+	#verdigris-login {
+		table {
+			margin-top:20px;
+			width: 40%;
+			margin-left:auto;
+			margin-right:auto;
+			tr {
+				vertical-align: center;
+				td {
+					text-align: left;
+					&:first-child {
+						text-align:right;
+					}
+				}
+			}
+		}
+	}
+	.footer-links {
+		overflow: auto;
+		padding-top:5px;
+		padding-bottom:5px;
+		font-size:12px;
+		color: $grayLight;
+  		a {
+    		padding: 0 10px;
+    		border-left: 1px solid $grayDarker;
+    		text-shadow: 0px 1px 0px black;
+			color: $grayLighter;
+    		&:first-child{
+      			padding-left: 0px;
+      			border: 0;
+    		}
+	    	&:hover {
+		      text-decoration: none;
+		      color: $blueinfo;
+		    } 
+		}
+		strong {
+		    display: block;
+		}
+		#sign-up {
+			background: rgba(0,10,0,0.5);
+	    // opacity:0.5;
+	    // filter:alpha(opacity=50); /* for ie8 */
+	    	-webkit-border-radius: 3px;
+	    	-moz-border-radius: 3px;
+	    	border-radius: 3px;
+	    	padding: 4px 4px 4px 4px;
+	    	a {
+	    		padding: 0px 1px 0px 5px;
+	    	}
+		}
+    }
+    input[type=text], input[type=password] {
+  		padding: 10px;
+		border: 1px solid #000;
+		height: auto;
+		margin-bottom: 15px;
+		background: rgba(255,255,255,0.3);
+		@include box-sizing;
+	}
 
+    label {
+    	display: inline;
+    	margin-right: 10px;
+    	color: $grayLighter;
+    }
 }
