minor css fixes

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -307,7 +307,7 @@ input.error, textarea.error {
 		margin-bottom:12px;
 		.or-separator {
 			position: relative;
-			padding: 0px 40px;
+			padding: 0px 20%;
 			color: $grayLighter;
 			margin-bottom: 4px;
 			font-size: 10px;
@@ -319,7 +319,7 @@ input.error, textarea.error {
 	#verdigris-login {
 		table {
 			margin-top:20px;
-			width: 40%;
+			width: 28%;
 			margin-left:auto;
 			margin-right:auto;
 			tr {
