--- a/app/views/shared/_login_page.html.erb
+++ b/app/views/shared/_login_page.html.erb
@@ -1,9 +1,11 @@
 <% provide(:title, 'Login') %>
-<div class="center hero-unit">
-	<%= link_to image_tag("VerdigrisFinal-complex.png", width: '25%', alt: "Verdigris Technologies"), 'http://verdigristech.com/'%><br>
-	<%= link_to image_tag("energyai_logo.png", width: '30%', alt: "Energy.AI"), root_path %>
+<div class="row-fluid">
+	<div class="center hero-unit">
+		<%= link_to image_tag("VerdigrisFinal-complex.png", width: '25%', alt: "Verdigris Technologies"), 'http://verdigristech.com/'%><br>
+		<%= link_to image_tag("energyai_logo.png", width: '30%', alt: "Energy.AI"), root_path %>
 
-	<%= render 'shared/vdglogin' %>
+		<%= render 'shared/vdglogin' %>
+	</div>
 </div>
 <div class="footer-links row-fluid">
 	<div class="pull-right">
