--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,9 @@
-<footer class="footer">
-	<small>
-		Verdigris Technologies
-	</small>
+<footer>
+<div class="navbar navbar-fixed-bottom">
+	<div class="navbar-inner">
+		<div class="container-fluid">
+			<%= link_to image_tag("VerdigrisFinal-longform.png", alt: "Verdigris Technologies"), "http://verdigristech.com", id: "logo", class: "brand" %>
+		</div>
+	</div>
+</div>
 </footer>
