--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,12 @@
 <header class="navbar navbar-fixed-top">
     <div class="navbar-inner">
-        <div class="container">
+        <div class="container-fluid">
+        	<%= link_to image_tag("EnergyAI-small-shadow.png", alt: "Energy.AI"), root_path, id: "logo" %>
+        	<nav>
+	            <ul class="nav pull-right">
+		              	<li><%= link_to "Log In", root_path %></li>
+	            </ul>
+	        </nav>
 	    </div>
 	</div>
 </header>
