--- a/app/views/shared/_login_page.html.erb
+++ b/app/views/shared/_login_page.html.erb
@@ -1,9 +1,9 @@
 <% provide(:title, 'Login') %>
 <div class="row-fluid">
 	<div class="center hero-unit">
-		<%= link_to image_tag("VerdigrisFinal-complex.png", width: '25%', alt: "Verdigris Technologies"), 'http://verdigristech.com/'%><br>
-		<%= link_to image_tag("energyai_logo.png", width: '30%', alt: "Energy.AI"), root_path %>
-
+		<%= link_to image_tag("EnergyAI-vertical.png", width: '28%', alt: "Energy.AI"), root_path %><br>
+		by<br>
+		<%= link_to image_tag("VerdigrisFinal-longform.png", width: '18%', alt: "Verdigris Technologies"), 'http://verdigristech.com/'%><br>
 		<%= render 'shared/vdglogin' %>
 	</div>
 </div>
@@ -14,5 +14,5 @@
 		<%= link_to "Help", help_path %>
 		<%= link_to "Terms", terms_path %>
 	</div>
-	<span id="sign-up">Need an account? <%= link_to "Sign Up", '#' %></span>
+	<span id="sign-up">Need an account? <%= link_to "Sign Up", signup_path %></span>
 </div>
