--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -105,8 +105,23 @@ footer {
       width: 135px;
     }
   }
+  .thumbnail {
+    border: 0px solid #000;
+    padding: 0px;
+  }
+  .gravatar {
+    margin-right: 4px;
+  }
   .navbar {
     margin-bottom:0;
+    .divider-vertical {
+      height: 34px;
+      width: 1px;
+      margin: 0 9px;
+      overflow: hidden;
+      background-color: rgba(0,0,0,.2);
+      border-right: 1px solid $black;
+  }
   }
   .navbar-fixed-bottom {
     position: fixed;
@@ -121,6 +136,9 @@ footer {
       float: right;
       font-weight: bold;
       color: black;
+    }
+    .caret {
+      margin-top: 8px;
     }
   }
   .navbar-inner {
@@ -137,8 +155,8 @@ footer {
     -moz-box-shadow: 0px 1px 3px rgba(0,0,0,.25), inset 0 -1px 0 rgba(0,0,0,.1);
     box-shadow: 0px 1px 3px rgba(0,0,0,.25), inset 0 -1px 0 rgba(0,0,0,.3);
     .nav > li > a {
-      padding: 14px 15px 8px;
-      font-size: 14px;
+      padding: 8px 0px 4px 8px;
+      font-size: 12px;
       line-height: 18px;
       color: $gray15;
       text-decoration: none;
@@ -149,7 +167,7 @@ footer {
         text-decoration: none;
       }
     }
-}
+  }
 }
 // footer {
 //   margin-top: 45px;
@@ -336,9 +354,9 @@ input.error, textarea.error {
     color: red;
 }
 
-/* login page unique background */
-#Login-page {
-	background-image: image-url('login_bg.jpg');
+/* signin page unique background */
+#signin-page {
+	background-image: image-url('signin_bg.jpg');
 	background-attachment: fixed;
   	background-repeat: no-repeat;
   	background-size: cover;
@@ -381,7 +399,7 @@ input.error, textarea.error {
 			top: -6px;
 		}
 	}
-	#verdigris-login {
+	#verdigris-signin {
 		table {
 			margin-top:20px;
 			width: 28%;
@@ -433,21 +451,22 @@ input.error, textarea.error {
 	    		padding: 0px 1px 0px 5px;
 	    	}
 		}
-    }
-    input[type=text], input[type=password] {
-  		padding: 10px;
+  }
+  input[type=text], input[type=password] {
+  	padding: 10px;
 		border: 1px solid #000;
 		height: auto;
 		margin-bottom: 15px;
 		background: rgba(255,255,255,0.3);
+    color: white;
 		@include box-sizing;
 	}
 
-    label {
-    	display: inline;
-    	margin-right: 10px;
-    	color: $grayLighter;
-    }
+  label {
+  	display: inline;
+  	margin-right: 10px;
+  	color: $grayLighter;
+  }
 }
 
 /* navbar related styling */
@@ -497,6 +516,22 @@ input.error, textarea.error {
   .btn, .btn-group {
     margin-top: 7px;
     background-color: $navbarbluedark;  
+  }
+  .dropdown-menu{
+    label {
+      display: block;
+      padding: 3px 15px;
+      clear: both;
+      line-height: 18px;
+      white-space: nowrap;
+    }
+    input {
+      display: block;
+      margin: 3px 15px;
+      line-height: 18px;
+      white-space: nowrap; 
+      height: 20px;
+    }
   }
 }
 .btn-navbar {
