--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,6 +2,28 @@
 <div class="navbar navbar-fixed-bottom">
 	<div class="navbar-inner">
 		<div class="container-fluid">
+			<nav>
+				<ul class="nav pull-left">
+					<% if signed_in? %>              
+						<!-- <li><%= link_to "Users", users_path %></li> -->
+						<li id="foot-menu" class="dropup">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown"> <%= gravatar_for current_user, size: 26%><b class="caret"></b></a>
+							<ul class="dropdown-menu">
+								<li><%= link_to "My Account", current_user %></li>
+								<li><%= link_to "Settings", edit_user_path(current_user) %></li>
+								<li class="divider"></li>
+								<li> <%= link_to "Sign out", signout_path, method: "delete" %></li>
+							</ul>
+						</li>
+						<li id="username-display">
+							<%=link_to current_user.email, user_path(current_user) %>
+						</li>
+						<li class="divider-vertical"></li>
+						<!-- <li id="help-engine">  #render "shared/search_help" %>
+						<!-- </li> -->
+	              	<% end %>
+	            </ul>
+	        </nav>
 			<%= link_to image_tag("VerdigrisFinal-longform.png", alt: "Verdigris Technologies"), "http://verdigristech.com", id: "logo", class: "brand" %>
 		</div>
 	</div>
