--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,9 +1,12 @@
 <a href-"<%= user_path(object) %>">
-	<%= gravatar_for object, size: 52%>
+	<%= gravatar_for object, size: 60%>
 </a>
 <h1>
-	<%= object.name %>, <%= object.email %>
+	<%= object.name %>
 </h1>
 <span>
 	<%= link_to "view my profile", object %>
+</span>
+<span>
+	<%= object.email %>
 </span>
