--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -300,9 +300,9 @@ input, textarea, select, .uneditable-input {
   }
 }
 
-/* microposts */
+/* microalerts */
 
-.microposts {
+.microalerts {
   list-style: none;
   margin: 10px 0 0 0;
 
