--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,1 +1,5 @@
-<%= render 'shared/signin_page' %>
+<% if signed_in? %>
+	<%= render 'shared/user_home_page' %>
+<% else %>
+	<%= render 'shared/signin_page' %>
+<% end %>
