add user following

--- a/app/views/shared/_user_home_page.html.erb
+++ b/app/views/shared/_user_home_page.html.erb
@@ -1,12 +1,11 @@
 <div class="row-fluid">
 	<aside class="span2">
 	<section>
-		
 	</section>
 	<section>
 		<h3>Alert Feed</h3>
 		<span>
-			<%= pluralize(current_user.microalerts.count, "alert") %>
+			<%= pluralize(current_user.feed.count, "alert") %>
 		</span>
 		<%= render 'shared/feed' %>
 	</section>
