add building create form

--- a/app/views/buildings/_building_info.html.erb
+++ b/app/views/buildings/_building_info.html.erb
@@ -1,5 +1,5 @@
 <a href-"<%= user_path(object) %>">
-	<%= bavatar_for object, size: 60%>
+	<%= avatar_for object, size: 60%>
 </a>
 <h1>
 	<%= object.name %>
