--- a/app/views/buildings/new.html.erb
+++ b/app/views/buildings/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'New Building') %>
-<h1>Install new building</h1>
+<h1>Setup a New Building</h1>
 
 <div class="row">
 	<div class="span6 offset3">
