--- a/app/views/buildings/show.html.erb
+++ b/app/views/buildings/show.html.erb
@@ -7,6 +7,18 @@
 		</section>
 	</aside>
 	<div class="span10">
+		<div class="boxlabel-rt span4">
+			Active alerts
 
+		</div>
+		<div class="boxlabel-topconsume span4">
+			Active alerts
+
+		</div> 
+		<div class="boxlabel-topproduce span4">
+			Active alerts
+
+		</div> 
+ 
 	</div>
 </div>
