--- a/app/views/microalerts/_microalert_form.html.erb
+++ b/app/views/microalerts/_microalert_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for (@microalert) do |f| %>
+<%= form_for [@vocal, @microalert] do |f| %>
 	<%= render 'shared/error_messages', object: f.object %>
 	<div id="microalert_content" class="field">
 		<%= f.text_area :content, placeholder: "new microalert..." %>
