--- a/app/views/buildings/show.html.erb
+++ b/app/views/buildings/show.html.erb
@@ -8,7 +8,7 @@
 	</aside>
 	<div class="span10">
 		<div class="boxlabel-rt span4">
-			Active alerts
+			<%= render 'shared/feed' %>
 
 		</div>
 		<div class="boxlabel-topconsume span4">
