--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,10 +9,13 @@
 						<li id="fat-menu" class="dropdown">
 							<a href=# class="dropdown-toggle" data-toggle="dropdown"> Buildings <b class="caret"></b></a>
 							<ul class="dropdown-menu">
+								<li><%= link_to "All Buildings", buildings_path %></li>
 								<li><%= link_to "My Buildings", current_user %></li>
 								<li><%= link_to "Alert Settings", edit_user_path(current_user) %></li>
 								<li class="divider"></li>
-								<li> <%= link_to "Moscone [default]", signout_path, method: "delete" %></li>
+								<% if recent_buildings.any? %>
+									<%= render partial: 'shared/recent_building', collection: recent_buildings %>
+								<% end %>
 							</ul>
 						</li>
 	              	<% else %>
