more buds, start circuits

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -661,3 +661,10 @@ input.error, textarea.error {
             border-radius: 4px 0 4px 0;
   }
 }
+
+#leftcolumn {
+  float: left;
+}
+#rightcolumn {
+  float: right; 
+}
