--- a/app/views/buds/edit.html.erb
+++ b/app/views/buds/edit.html.erb
@@ -1,18 +1,33 @@
-<% provide(:title, 'Edit #{bud.name}') %>
+<% provide(:title, @bud.name) %>
 
 <h1>Bud Configuration</h1>
 
 <div class="row">
     <div class="span6 offset3">
+        <%= if signed_in? && current_user.admin?
+            button_to "Remove Bud", @bud, method: :delete, class: :destroy, class: "btn btn-large btn-primary", data: { confirm: "Are you sure?" }
+        end %>
+        
       	<%= form_for(@bud) do |f| %>
         	<%= render 'shared/error_messages', object: @bud %>
             <%= f.label :uid %>
             <%= f.text_field :uid %>
 
-        	<%= f.label :name %>
+        	Panel Label
         	<%= f.text_field :name %>
+
+            Active?
+            <%= f.check_box :active %>
 
         	<%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
       	<% end %>
+
+        <h2>Circuit Labels</h2>
+        <div id="leftcolumn">
+            spi0:id
+        </div>
+        <div id="rightcolumn">
+            spi1:id
+        </div>
     </div>
 </div>
