--- a/app/views/shared/_user_home_page.html.erb
+++ b/app/views/shared/_user_home_page.html.erb
@@ -28,6 +28,7 @@ $(function() {
 		<%= render 'shared/feed' %>
 	</section>
 	</aside>
+  
 	<div class="span10">
 		<section>
 			<%= render 'shared/stats' %>
@@ -35,19 +36,21 @@ $(function() {
 
 		<h3>Information</h3>
 
+    <br><h3>Buds</h3>
 		<div id="accordion">
-          	<ul class="menu">
-          		<% for b in Bud.find(:all) %>
-            		<li>
-            			<a class="m1" href="#"><%= b.name %></a>
-            			<ul>
-            				<li><a href="#"><%= b.hardware_v %></a></li>
-            				<li><a href="#"><%= b.firmware_v %></a></li>
-            			</ul>
-            		</li>
-            	<% end %>
-          	</ul>
-    	</div>
+      <ul class="menu">
+        <% for b in Bud.find(:all) %>
+          <li>
+            <a class="m1" href="#"><%= b.name %></a>
+            <ul>
+              <li><a href="#">uid : <%= b.uid %></a></li>
+            	<li><a href="#">h : <%= b.hardware_v %></a></li>
+            	<li><a href="#">f : <%= b.firmware_v %></a></li>
+            </ul>
+          </li>
+        <% end %>
+      </ul>
+    </div>
 
 	</div>
 </div>
