--- a/app/views/buds/_bud.html.erb
+++ b/app/views/buds/_bud.html.erb
@@ -1,4 +1,4 @@
 <li>
-	bud : <%= link_to bud.name, bud %><br>
-	uid : <%= bud.uid %>
+	bud uid : <%= link_to bud.uid, bud %><br>
+	panel name : <%= bud.name %>
 </li>
