--- a/app/views/buildings/_building.html.erb
+++ b/app/views/buildings/_building.html.erb
@@ -2,7 +2,7 @@
 	<%= avatar_for building, size: 52 %>
 	<%= link_to building.name, building %>
 	<% if current_user.admin? %>
-		| <%= link_to "delete", building, method: :delete, data: { confirm: "Are you sure?" } %>
+		| <%= link_to "delete", building, method: :delete, data: { confirm: "Destroying a building cannot be undone, Are you sure?" } %>
 	<% end %>
 	<p>
 		<%= building.address %>
