--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -668,3 +668,6 @@ input.error, textarea.error {
 #rightcolumn {
   float: right; 
 }
+.inline form {display: inline; }
+div.inline { float:left; }
+.clearBoth { clear:both; }
