--- a/app/views/circuits/_circuit.html.erb
+++ b/app/views/circuits/_circuit.html.erb
@@ -1,3 +1,17 @@
 <li>
-	<span class="content"><%= wrap(circuit.name) %></span>
+	<% if circuit.side == 1 then %>
+        <div id="leftcolumn">
+			<b><%= circuit.location %></b>
+		</div>
+        <div id="rightcolumn">
+			<%= circuit.name %>
+		</div>
+	<% else %>
+        <div id="leftcolumn">
+			<%= circuit.name %>
+		</div>
+        <div id="rightcolumn">
+			<b><%= circuit.location %></b>
+		</div>
+	<% end %>
 </li>
