--- a/app/views/buds/show.html.erb
+++ b/app/views/buds/show.html.erb
@@ -6,41 +6,28 @@
   	<aside class="span4">
     	<section>
       		<h1>
-        		Panel Label : <%= @bud.name %>
+        		Panel Label: <%= @bud.name %>
       		</h1>
     	</section>
     	<section>
      		<h1>Details</h1>
-          hardware : <%= @bud.hardware_v %><br>
-          firmware : <%= @bud.firmware_v %><br>
-          active : <%= @bud.active %>
+          hardware: <%= @bud.hardware_v %><br>
+          firmware: <%= @bud.firmware_v %><br>
+          active: <%= @bud.active %>
     	</section>
 
       <h2>Circuit Labels</h2>
         <div id="leftcolumn">
-          spi0:id
-          <section>
+          <h3>spi0:id</h3>
             <% if @bud.circuits.any? %>
-              <h3> (<%= @bud.circuits.count %>)</h3>
-              <ol class="circuits">
-                <%= render @bud.circuits %>
-              </ol>
-              <%= will_paginate @circuits %>
+                <%= render @bud.circuits.where("side = ?", 0) %>
             <% end %>
-          </section>
         </div>
-
         <div id="rightcolumn">
-          spi1:id
-          <section>
-          <% if @bud.circuits.any? %>
-            <h3> (<%= @bud.circuits.count %>)</h3>
-            <ol class="circuits">
-              <%= render @bud.circuits %>
-            </ol>
-            <%= will_paginate @circuits %>
-          <% end %>
-        </section>
+          <h3>spi1:id</h3>
+            <% if @bud.circuits.any? %>
+                <%= render @bud.circuits.where("side = ?", 1) %>
+            <% end %>
         </div>
 
   	</aside>
