--- a/app/views/buds/show.html.erb
+++ b/app/views/buds/show.html.erb
@@ -3,30 +3,23 @@
 <h1>Bud uid : <%= @bud.uid %></h1>
 
 <div class="row">
-  	<aside class="span4">
-    	<section>
-      		<h1>
-        		Panel Label: <%= @bud.name %>
-      		</h1>
-    	</section>
-    	<section>
-     		<h1>Details</h1>
-          hardware: <%= @bud.hardware_v %><br>
-          firmware: <%= @bud.firmware_v %><br>
-          active: <%= @bud.active %>
-    	</section>
+  	<aside class="span6 offset3">
+      <h2>Panel Label: <%= @bud.name %></h2>
+        hardware: <%= @bud.hardware_v %><br>
+        firmware: <%= @bud.firmware_v %><br>
+        active: <%= @bud.active %>
 
-      <h2>Circuit Labels</h2>
+        <h2>Panel Details</h2>
         <div id="leftcolumn">
           <h3>spi0:id</h3>
             <% if @bud.circuits.any? %>
-                <%= render @bud.circuits.where("side = ?", 0) %>
+              <%= render @bud.circuits.where("side = ?", 0) %>
             <% end %>
         </div>
         <div id="rightcolumn">
           <h3>spi1:id</h3>
             <% if @bud.circuits.any? %>
-                <%= render @bud.circuits.where("side = ?", 1) %>
+              <%= render @bud.circuits.where("side = ?", 1) %>
             <% end %>
         </div>
 
