--- a/app/views/buds/_bud_form.html.erb
+++ b/app/views/buds/_bud_form.html.erb
@@ -1,12 +1,13 @@
+<!-- partial for buildings edit -->
 <%= form_for(@bud) do |f| %>
     <%= render 'shared/error_messages', object: @bud %>
     <%= f.label :uid %>
     <%= f.text_field :uid %>
 
-    Panel Label
+    <%= f.label :name, "Panel Label" %>
     <%= f.text_field :name %>
 
-    Active?
+    <%= f.label :active, "Active?" %>
     <%= f.check_box :active %>
 
 	<%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
