--- a/app/views/buds/edit.html.erb
+++ b/app/views/buds/edit.html.erb
@@ -13,10 +13,10 @@
             <%= f.label :uid %>
             <%= f.text_field :uid %>
 
-        	Panel Label
+        	<%= f.label :name, "Panel Label" %>
         	<%= f.text_field :name %>
 
-            Active?
+            <%= f.label :active, "Active?" %>
             <%= f.check_box :active %>
 
         	<%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
@@ -26,8 +26,8 @@
         <div id="leftcolumn">
           <h3>spi0:id</h3>
             <% if @bud.circuits.any? %>
-                <% for c in @bud.circuits.where("side = ?", 0) do %>
-                    <%= render 'circuits/circuit_form', bud: @bud, circuit: c %>
+                <% for cir in @bud.circuits.where("side = ?", 0) do %>
+                    <%= render 'circuits/circuit_form', bud: @bud, circuit: cir %>
                 <% end %>
             <% end %>
             <%= link_to "+", new_bud_circuit_path(@bud, d_side: 0), class: "btn btn-large btn-primary" %>
@@ -36,8 +36,8 @@
         <div id="rightcolumn">
           <h3>spi1:id</h3>
             <% if @bud.circuits.any? %>
-                <% for c in @bud.circuits.where("side = ?", 1) do %>
-                    <%= render 'circuits/circuit_form', bud: @bud, circuit: c %>
+                <% for cir in @bud.circuits.where("side = ?", 1) do %>
+                    <%= render 'circuits/circuit_form', bud: @bud, circuit: cir %>
                 <% end %>
             <% end %>
             <%= link_to "+", new_bud_circuit_path(@bud, d_side: 1), class: "btn btn-large btn-primary" %>
