--- a/app/views/circuits/new.html.erb
+++ b/app/views/circuits/new.html.erb
@@ -6,9 +6,9 @@
   	<%= render 'shared/error_messages', object: @circuit %>
   		<%= f.label :name %>
     	<%= f.text_field :name %>
-    	Side: spi, 0 (left) or 1 (right)
+    	<%= f.label :side, "Side: spi, 0 (left) or 1 (right)" %>
     	<%= f.text_field :side, value: @d_side %>
-    	Location: id, format: x.y
+    	<%= f.label :location, "Location: id, format: x.y" %>
     	<%= f.text_field :location %>
   	<%= f.submit "Create", class: "btn btn-large btn-primary" %>
 	<% end %>
