--- a/app/views/shared/_user_home_page.html.erb
+++ b/app/views/shared/_user_home_page.html.erb
@@ -12,7 +12,7 @@
 	</aside>
 	<div class="span10">
 		<section>
-			<%= render 'shared/stats' %>
+			<%= render 'shared/user_stats' %>
 		</section>
 		<h3>Information</h3>
 
