--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
 			<%= render 'shared/user_info', object: @user %>
 		</section>
 		<section>
-			<%= render 'shared/stats' %>
+			<%= render 'shared/user_stats' %>
 		</section>
 		<section>
 			<%= render 'follow_form' if signed_in? %>
