--- a/app/views/buildings/show.html.erb
+++ b/app/views/buildings/show.html.erb
@@ -5,6 +5,9 @@
 		<section>
 			<%= render 'building_info', object: @building %>
 		</section>
+		<section>
+			<%= render 'follow_form' if signed_in? %>
+		</section>
 	</aside>
 	<div class="span10">
 		<div class="boxlabel-rt span4">
