--- a/app/views/users/_follow_form.html.erb
+++ b/app/views/users/_follow_form.html.erb
@@ -1,9 +1,9 @@
 <% unless current_user?(@user) %>
 	<div id="follow_form">
 	<% if current_user.following?(@user) %>
-		<%= render 'unfollow' %>
+		<%= render 'shared/unfollow', followed: @user %>
 	<% else %>
-		<%= render 'follow' %>
+		<%= render 'shared/follow', followed: @user %>
 	<% end %>
 	</div>
 <% end %>  
