--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -5,23 +5,9 @@
 			<%= render 'shared/user_info', object: @user %>
 		</section>
 		<section>
-			<%= render 'shared/stats' %>
-			<% if @users.any? %>
-				<div class="user_avatars">
-					<% @users.each do |user| %>
-						<%= link_to gravatar_for(user, size: 30), user %>
-					<% end %>
-				</div>
-			<% end %>
+			<%= render 'shared/user_stats' %>
+			<%= render 'shared/user_building_icon_list' %>
 		</section>
 	</aside>
-	<div class="span10">
-		<h3><%= @title %></h3>
-		<% if @users.any? %>
-			<ul class="users">
-				<%= render @users %>
-			</ul>
-			<%= will_paginate %>
-		<% end %>
-	</div>
+	<%= render 'shared/user_building_detailed_lists' %>	
 </div>
