--- a/app/views/buds/index.html.erb
+++ b/app/views/buds/index.html.erb
@@ -8,8 +8,17 @@
 
 <%= will_paginate %>
 
-<ul class="buds">
-  	<%= render @buds %>
-</ul>
+<div class="span2">
+	<h3>Panel Name</h3>
+</div>
+<div class="span2">
+	<h3>Bud UID</h3>
+</div>
+<div class="span2">
+	<h3>Heart Beat</h3>
+</div>
+<br>
+
+<%= render @buds %>
 
 <%= will_paginate %>
